# reaper-to-gld-sync

./: .clang-format  .gitignore  .gitmodules  AppIcon.icns  CMakeLists.txt  GEMINI.md  Info.plist.in  README.md
.github/workflows/: build.yml  release.yml
src/: ConfigWindowController.h  ConfigWindowController.mm  arduino_manager.cpp  arduino_manager.hpp  config_loader.cpp  config_loader.hpp  engine.cpp  engine.hpp  logger.cpp  logger.hpp  main.cpp  main.mm  midi_manager.cpp  midi_manager.hpp  mixer.cpp  mixer.hpp  pulse_manager.cpp  pulse_manager.hpp  pulse_manager.mm
src/ReaperSyncPrefsUI/ReaperSyncPrefsUI/: ConfigWindow.xib
src/ReaperSyncPrefsUI/ReaperSyncPrefsUI.xcodeproj/: project.pbxproj
src/ReaperSyncPrefsUI/ReaperSyncPrefsUI.xcodeproj/project.xcworkspace/xcuserdata/rafaelberne.xcuserdatad/: UserInterfaceState.xcuserstate
src/ReaperSyncPrefsUI/ReaperSyncPrefsUI.xcodeproj/xcuserdata/rafaelberne.xcuserdatad/xcschemes/: xcschememanagement.plist
tests/: test_config.cpp
